hw03/k8s_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-dp
  labels:
    app: kuber-dp
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: health
  template:
    metadata:
      labels:
        env: health
    spec:
      containers:
        - name: kuber-app
          image: alexadubinina87/dockertest:v02
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 30
            readinessProbe:
              httpGet:
                path: /health
                port: 8000
              initialDelaySeconds: 5
              periodSeconds: 10
