hw03/k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  selector:
    env: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
