hw03/k8s_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuber-ingress
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: health-service
                port:
                  number: 80
